Insert expression Data

--- a/app/src/main/res/layout/activity_update_trip.xml
+++ b/app/src/main/res/layout/activity_update_trip.xml
@@ -139,4 +139,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descriptionContainerUpdate" />
 
+    <Button
+        android:id="@+id/expression_button_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="See all expression"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/update_trip_button" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
