--- a/app/src/main/res/layout/activity_add_expression.xml
+++ b/app/src/main/res/layout/activity_add_expression.xml
@@ -32,7 +32,8 @@
             android:id="@+id/amountInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Amount" />
+            android:hint="Amount"
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
