--- a/app/src/main/res/layout/activity_expression.xml
+++ b/app/src/main/res/layout/activity_expression.xml
@@ -21,7 +21,7 @@
         tools:ignore="ContentDescription" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tripRecyclerView"
+        android:id="@+id/expression_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,13 +46,13 @@
 
     <TextView
         android:id="@+id/noExpressionDataTxt"
-        android:visibility="gone"
-        android:alpha="0.4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:alpha="0.4"
         android:text="No Data."
         android:textSize="20sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
