--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".TripFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -25,7 +25,7 @@
             app:srcCompat="@drawable/ic_add" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tripRecyclerView"
+            android:id="@+id/trip_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/emptyTripImageView"
+            android:id="@+id/empty_trip_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="200dp"
@@ -47,17 +47,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/noTripDataTxt"
-            android:visibility="gone"
-            android:alpha="0.4"
+            android:id="@+id/no_trip_data_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:alpha="0.4"
             android:text="No Data."
             android:textSize="20sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emptyTripImageView" />
+            app:layout_constraintTop_toBottomOf="@+id/empty_trip_image_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
