--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
-        android:title="Trip"
-        android:id="@+id/tripFragment"
-        android:icon="@drawable/ic_map" />
+        android:id="@+id/trip_fragment"
+        android:icon="@drawable/ic_map"
+        android:title="Trip" />
     <item
-        android:title="Search"
-        android:id="@+id/searchFragment"
-        android:icon="@drawable/ic_search" />
+        android:id="@+id/search_fragment"
+        android:icon="@drawable/ic_search"
+        android:title="Search" />
     <item
-        android:title="Upload"
-        android:id="@+id/uploadFragment"
-        android:icon="@drawable/ic_cloud_upload" />
+        android:id="@+id/update_fragment"
+        android:icon="@drawable/ic_cloud_upload"
+        android:title="Upload" />
 </menu>
